--- a/HTML-CSS/index.html
+++ b/HTML-CSS/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/styles/style.css">
+    <link rel="stylesheet" href='styles/style.css'>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Archivo+Narrow:ital,wght@0,400..700;1,400..700&display=swap" rel="stylesheet">
     <title>Portifólio</title>
@@ -22,33 +22,33 @@
 
     <main>
         <article id="home">
-
             <aside>
                 <section class="nome-sobrenome">
                     <h1 id="nome">DANIEL GARCÊZ</h1>
                     <h2 id="sobrenome">DEV FRONT-END</h2>
-                    <picture></picture>
                 </section>
                 <section class="botoes">
                     <button id="linkedin">
                         <a href="https://www.linkedin.com/in/daniel-garc%C3%AAz-092960246/" target="_blank">Linkedin</a>
                     </button>
-                    <button id="redes">
+                    <button id="outras-redes">
                         <a href="/">OUTRAS REDES</a>
                     </button>
                 </section>
             </aside>
 
             <picture><img src="components/img/EstilosoPB.png" alt="ME"></picture>
-
         </article>
 
         <article id="sobre">
 
-            <h1>SOBRE MIM</h1>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Amet incidunt dolore maxime praesentium dignissimos laborum, aperiam ipsam itaque molestias quas illum quasi provident libero vel, sapiente atque totam, necessitatibus distinctio.</p>
+            <picture><img src="components/img/PerfilCirculoAmarelo.png" alt="perfil"></picture>
 
-            <picture><img src="/" alt="perfil"></picture>
+            <section>
+                <h1>SOBRE MIM</h1>
+                <p>Meu nome é Daniel Garcêz e adoro tecnologia. O primeiro contato que tive com programação foi em um curso que fiz em 2019. Apesar de gostar da área, só fui começar a dar foco em 2022, quando comecei a fazer cursos voltados para o desenvolvimento web.</p>
+            </section>
+
         </article>
 
         <article id="projetos">
@@ -80,12 +80,12 @@
     </main>
     
     <footer>
-
-        <picture></picture>
-        <picture></picture>
-        <h2>DanielGarcêz</h2>
-        <h3>Desenvolvedor Front-End</h3>
-
+        <section class="rodape">
+            <picture></picture>
+            <picture></picture>
+            <h2>DanielGarcêz</h2>
+            <h3>Desenvolvedor Front-End</h3>
+        </section>
     </footer>
 </body>
 </html>
