--- a/index.html
+++ b/index.html
@@ -51,30 +51,37 @@
 
         </article>
 
-        <article id="projetos">
+        <article id="meus-projetos">
 
             <h1>MEUS PROJETOS</h1>
 
-            <picture></picture>
-            <picture></picture>
-            <picture></picture>
-            <picture></picture>
+            <section class="projetos">
+                <picture><img class="thumbnail" src="/components/img/default-projetos.png" alt="p1"></picture>
+                <picture><img class="thumbnail" src="/components/img/default-projetos.png" alt="p2"></picture>
+                <picture><img class="thumbnail" src="/components/img/default-projetos.png" alt="p3"></picture>
+                <picture><img class="thumbnail" src="/components/img/default-projetos.png" alt="p4"></picture>
+                <picture><img class="thumbnail" src="/components/img/default-projetos.png" alt="p5"></picture>
+                <picture><img class="thumbnail" src="/components/img/default-projetos.png" alt="p6"></picture>
+            </section>
 
         </article>
 
         <article id="habilidades">
 
             <h1>MINHAS HABILIDADES</h1>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Amet illum error asperiores. Molestiae dolor earum veniam debitis recusandae officia soluta, quam aut quidem aliquam aperiam quaerat doloribus labore quisquam possimus!</p>
-
-            <aside>
-                <picture></picture>
-                <picture></picture>
-                <picture></picture>
-                <picture></picture>
-                <picture></picture>
-                <picture></picture>
-            </aside>
+            <section>
+                <aside class="selector">
+                    <picture><img class="icons" src="/components/img/default-habilidades.png" alt=""></picture>
+                    <picture><img class="icons" src="/components/img/default-habilidades.png" alt=""></picture>
+                    <picture><img class="icons" src="/components/img/default-habilidades.png" alt=""></picture>
+                    <picture><img class="icons" src="/components/img/default-habilidades.png" alt=""></picture>
+                    <picture><img class="icons" src="/components/img/default-habilidades.png" alt=""></picture>
+                    <picture><img class="icons" src="/components/img/default-habilidades.png" alt=""></picture>
+                </aside>
+                <aside>
+                    <p>Tenho conhecimento sobre as seguintes tecnologias (passe o mouse em cima dos ícones para saber mais)</p>
+                </aside>
+            </section>
 
         </article>
     </main>
