--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <ul class="menu">
                 <li><a href="#home-page">HOME</a></li>
                 <li><a href="#sobre">SOBRE</a></li>
-                <li><a href="#projetos">PROJETOS</a></li>
+                <li><a href="#meus-projetos">PROJETOS</a></li>
                 <li><a href="#habilidades">HABILIDADES</a></li>
             </ul>
         </nav>
@@ -56,12 +56,12 @@
             <h1>MEUS PROJETOS</h1>
 
             <section class="projetos">
-                <picture><img class="thumbnail" src="/components/img/default-projetos.png" alt="p1"></picture>
-                <picture><img class="thumbnail" src="/components/img/default-projetos.png" alt="p2"></picture>
-                <picture><img class="thumbnail" src="/components/img/default-projetos.png" alt="p3"></picture>
-                <picture><img class="thumbnail" src="/components/img/default-projetos.png" alt="p4"></picture>
-                <picture><img class="thumbnail" src="/components/img/default-projetos.png" alt="p5"></picture>
-                <picture><img class="thumbnail" src="/components/img/default-projetos.png" alt="p6"></picture>
+                <picture><img class="thumbnail" src="/components/forms/default-projetos.png" alt="p1"></picture>
+                <picture><img class="thumbnail" src="/components/forms/default-projetos.png" alt="p2"></picture>
+                <picture><img class="thumbnail" src="/components/forms/default-projetos.png" alt="p3"></picture>
+                <picture><img class="thumbnail" src="/components/forms/default-projetos.png" alt="p4"></picture>
+                <picture><img class="thumbnail" src="/components/forms/default-projetos.png" alt="p5"></picture>
+                <picture><img class="thumbnail" src="/components/forms/default-projetos.png" alt="p6"></picture>
             </section>
 
         </article>
@@ -71,12 +71,12 @@
             <h1>MINHAS HABILIDADES</h1>
             <section>
                 <aside class="selector">
-                    <picture><img class="icons" src="/components/img/default-habilidades.png" alt=""></picture>
-                    <picture><img class="icons" src="/components/img/default-habilidades.png" alt=""></picture>
-                    <picture><img class="icons" src="/components/img/default-habilidades.png" alt=""></picture>
-                    <picture><img class="icons" src="/components/img/default-habilidades.png" alt=""></picture>
-                    <picture><img class="icons" src="/components/img/default-habilidades.png" alt=""></picture>
-                    <picture><img class="icons" src="/components/img/default-habilidades.png" alt=""></picture>
+                    <picture><img class="icons" src="/components/icons/HTML-LOGO.png" alt="HTML-LOGO"></picture>
+                    <picture><img class="icons" src="/components/icons/CSS-LOGO.png" alt="CSS-LOGO"></picture>
+                    <picture><img class="icons" src="/components/icons/JS-LOGO.png" alt="JS-LOGO"></picture>
+                    <picture><img class="icons" src="/components/icons/GITHUB-LOGO.png" alt="GITHUB-LOGO"></picture>
+                    <picture><img class="icons" src="/components/icons/NODE-LOGO.png" alt="NODE-LOGO"></picture>
+                    <picture><img class="icons" src="/components/icons/FIGMA-LOGO.png" alt="FIGMA-LOGO"></picture>
                 </aside>
                 <aside>
                     <p>Tenho conhecimento sobre as seguintes tecnologias (passe o mouse em cima dos ícones para saber mais)</p>
