--- a/index.html
+++ b/index.html
@@ -56,12 +56,12 @@
             <h1>MEUS PROJETOS</h1>
 
             <section class="projetos">
-                <picture><img class="thumbnail" src="/components/img/DefaultProjetos.png" alt="p1"></picture>
-                <picture><img class="thumbnail" src="/components/img/DefaultProjetos.png" alt="p2"></picture>
-                <picture><img class="thumbnail" src="/components/img/DefaultProjetos.png" alt="p3"></picture>
-                <picture><img class="thumbnail" src="/components/img/DefaultProjetos.png" alt="p4"></picture>
-                <picture><img class="thumbnail" src="/components/img/DefaultProjetos.png" alt="p5"></picture>
-                <picture><img class="thumbnail" src="/components/img/DefaultProjetos.png" alt="p6"></picture>
+                <picture><img class="thumbnail" src="components/img/DefaultProjetos.png" alt="p1"></picture>
+                <picture><img class="thumbnail" src="components/img/DefaultProjetos.png" alt="p2"></picture>
+                <picture><img class="thumbnail" src="components/img/DefaultProjetos.png" alt="p3"></picture>
+                <picture><img class="thumbnail" src="components/img/DefaultProjetos.png" alt="p4"></picture>
+                <picture><img class="thumbnail" src="components/img/DefaultProjetos.png" alt="p5"></picture>
+                <picture><img class="thumbnail" src="components/img/DefaultProjetos.png" alt="p6"></picture>
             </section>
 
         </article>
@@ -71,12 +71,12 @@
             <h1>MINHAS HABILIDADES</h1>
             <section>
                 <aside class="selector">
-                    <picture><img class="icons" src="/components/icons/HtmlLogo.png" alt="HTML-LOGO"></picture>
-                    <picture><img class="icons" src="/components/icons/CssLogo.png" alt="CSS-LOGO"></picture>
-                    <picture><img class="icons" src="/components/icons/JsLogo.png" alt="JS-LOGO"></picture>
-                    <picture><img class="icons" src="/components/icons/GithubLogo.png" alt="GITHUB-LOGO"></picture>
-                    <picture><img class="icons" src="/components/icons/NodeLogo.png" alt="NODE-LOGO"></picture>
-                    <picture><img class="icons" src="/components/icons/FigmaLogo.png" alt="FIGMA-LOGO"></picture>
+                    <picture><img class="icons" src="components/icons/HtmlLogo.png" alt="HTML-LOGO"></picture>
+                    <picture><img class="icons" src="components/icons/CssLogo.png" alt="CSS-LOGO"></picture>
+                    <picture><img class="icons" src="components/icons/JsLogo.png" alt="JS-LOGO"></picture>
+                    <picture><img class="icons" src="components/icons/GithubLogo.png" alt="GITHUB-LOGO"></picture>
+                    <picture><img class="icons" src="components/icons/NodeLogo.png" alt="NODE-LOGO"></picture>
+                    <picture><img class="icons" src="components/icons/FigmaLogo.png" alt="FIGMA-LOGO"></picture>
                 </aside>
                 <aside>
                     <p>Tenho conhecimento sobre as seguintes tecnologias (passe o mouse em cima dos ícones para saber mais)</p>
