--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href='styles/style.css'>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Archivo+Narrow:ital,wght@0,400..700;1,400..700&display=swap" rel="stylesheet">
+    <script src="js/index.js"></script>
     <title>Portifólio</title>
 </head>
 <body id="home-page">
@@ -71,12 +72,23 @@
             <h1>MINHAS HABILIDADES</h1>
             <section>
                 <aside class="selector">
-                    <picture><img class="icons" src="components/icons/HtmlLogo.png" alt="HTML-LOGO"></picture>
-                    <picture><img class="icons" src="components/icons/CssLogo.png" alt="CSS-LOGO"></picture>
-                    <picture><img class="icons" src="components/icons/JsLogo.png" alt="JS-LOGO"></picture>
-                    <picture><img class="icons" src="components/icons/GithubLogo.png" alt="GITHUB-LOGO"></picture>
-                    <picture><img class="icons" src="components/icons/NodeLogo.png" alt="NODE-LOGO"></picture>
-                    <picture><img class="icons" src="components/icons/FigmaLogo.png" alt="FIGMA-LOGO"></picture>
+                    <picture>
+                        <img id="HTML-LOGO" class="icons" src="components/icons/HtmlLogo.png" alt="HTML-LOGO"></picture>
+                        
+                    <picture>
+                        <img id="CSS-LOGO" class="icons" src="components/icons/CssLogo.png" alt="CSS-LOGO"></picture>
+
+                    <picture>
+                        <img id="JS-LOGO" class="icons" src="components/icons/JsLogo.png" alt="JS-LOGO"></picture>
+
+                    <picture>
+                        <img id="GITHUB-LOGO" class="icons" src="components/icons/GithubLogo.png" alt="GITHUB-LOGO"></picture>
+
+                    <picture>
+                        <img id="NODE-LOGO" class="icons" src="components/icons/NodeLogo.png" alt="NODE-LOGO"></picture>
+
+                    <picture>
+                        <img id="FIGMA-LOGO" class="icons" src="components/icons/FigmaLogo.png" alt="FIGMA-LOGO"></picture>
                 </aside>
                 <aside>
                     <p>Tenho conhecimento sobre as seguintes tecnologias (passe o mouse em cima dos ícones para saber mais)</p>
