--- a/index.html
+++ b/index.html
@@ -73,22 +73,28 @@
             <section>
                 <aside class="selector">
                     <picture>
-                        <img id="HTML-LOGO" class="icons" src="components/icons/HtmlLogo.png" alt="HTML-LOGO"></picture>
+                        <img onmouseover="trocarImagem()" id="HTML-LOGO" class="icons" src="components/icons/HtmlLogo.png" alt="HTML-LOGO">
+                    </picture>
                         
                     <picture>
-                        <img id="CSS-LOGO" class="icons" src="components/icons/CssLogo.png" alt="CSS-LOGO"></picture>
+                        <img id="CSS-LOGO" class="icons" src="components/icons/CssLogo.png" alt="CSS-LOGO">
+                    </picture>
 
                     <picture>
-                        <img id="JS-LOGO" class="icons" src="components/icons/JsLogo.png" alt="JS-LOGO"></picture>
+                        <img id="JS-LOGO" class="icons" src="components/icons/JsLogo.png" alt="JS-LOGO">
+                    </picture>
 
                     <picture>
-                        <img id="GITHUB-LOGO" class="icons" src="components/icons/GithubLogo.png" alt="GITHUB-LOGO"></picture>
+                        <img id="GITHUB-LOGO" class="icons" src="components/icons/GithubLogo.png" alt="GITHUB-LOGO">
+                    </picture>
 
                     <picture>
-                        <img id="NODE-LOGO" class="icons" src="components/icons/NodeLogo.png" alt="NODE-LOGO"></picture>
+                        <img id="NODE-LOGO" class="icons" src="components/icons/NodeLogo.png" alt="NODE-LOGO">
+                    </picture>
 
                     <picture>
-                        <img id="FIGMA-LOGO" class="icons" src="components/icons/FigmaLogo.png" alt="FIGMA-LOGO"></picture>
+                        <img id="FIGMA-LOGO" class="icons" src="components/icons/FigmaLogo.png" alt="FIGMA-LOGO">
+                    </picture>
                 </aside>
                 <aside>
                     <p>Tenho conhecimento sobre as seguintes tecnologias (passe o mouse em cima dos ícones para saber mais)</p>
