--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href='styles/style.css'>
+    <link rel="shortcut icon" href="components/icons/HtmlLogo.png" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Archivo+Narrow:ital,wght@0,400..700;1,400..700&display=swap" rel="stylesheet">
     <script src="js/index.js"></script>
@@ -73,7 +74,7 @@
             <section>
                 <aside class="selector">
                     <picture>
-                        <img onmouseover="trocarImagem()" id="HTML-LOGO" class="icons" src="components/icons/HtmlLogo.png" alt="HTML-LOGO">
+                        <img id="HTML-LOGO" class="icons" src="components/icons/HtmlLogo.png" alt="HTML-LOGO">
                     </picture>
                         
                     <picture>
