--- a/index.html
+++ b/index.html
@@ -58,12 +58,12 @@
             <h1>MEUS PROJETOS</h1>
 
             <section class="projetos">
-                <picture><img class="thumbnail" src="components/img/DefaultProjetos.png" alt="p1"></picture>
-                <picture><img class="thumbnail" src="components/img/DefaultProjetos.png" alt="p2"></picture>
-                <picture><img class="thumbnail" src="components/img/DefaultProjetos.png" alt="p3"></picture>
-                <picture><img class="thumbnail" src="components/img/DefaultProjetos.png" alt="p4"></picture>
-                <picture><img class="thumbnail" src="components/img/DefaultProjetos.png" alt="p5"></picture>
-                <picture><img class="thumbnail" src="components/img/DefaultProjetos.png" alt="p6"></picture>
+                <picture class="thumbnail" id="ProjetoAndroid">Projeto Android</picture>
+                <picture class="thumbnail" id="ProjetoCordel">Projeto Cordel</picture>
+                <picture class="thumbnail"></picture>
+                <picture class="thumbnail"></picture>
+                <picture class="thumbnail"></picture>
+                <picture class="thumbnail"></picture>
             </section>
 
         </article>
