--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <h1>MEUS PROJETOS</h1>
 
             <section class="projetos">
-                <picture class="thumbnail" id="ProjetoAndroid"><span>Projeto Android</span></picture>
+                <picture class="thumbnail" id="ProjetoAndroid">Projeto Android</picture>
                 <picture class="thumbnail" id="ProjetoCordel">Projeto Cordel</picture>
                 <picture class="thumbnail"></picture>
                 <picture class="thumbnail"></picture>
